# df-translation-toolkit

./: .coveragerc  .gitignore  DOCS.md  LICENSE.md  README.md  convert_raw_mo.py  dfgettext.py  getignoredlist.py  ignored.txt  mo2trans.py  po2csv.py  po2trans.py  pyproject.toml  raw2pot.py  setup.py  test_raws_mo.py  trans2po.py  trans2pot.py  translate_plain_text.py  translate_raws.py  translate_raws_batch.py  uncompressed_to_pot.py
.github/: dependabot.yml
.github/workflows/: draft-release.yml  test.yml
df-gettext-toolkit/: ignored.txt  trans2po.py
df_gettext_toolkit/: __init__.py  __main__.py  backup.py  cleanup_string.py  cli.py  common.py  convert_po_to_csv.py  convert_raw_mo.py  create_localization_mod.py  create_pot_batch.py  create_pot_from_compressed.py  create_pot_from_plain_text.py  create_pot_from_raw_objects.py  create_pot_from_speech.py  create_pot_from_stringdump.py  create_pot_from_text_steam.py  df_ignore_string_rules.py  dfgettext.py  fix_spaces.py  fix_translated_strings.py  getignoredlist.py  make_speech_pot.py  mo.py  mo2trans.py  old_file_loaders.py  parse_mo.py  parse_plain_text.py  parse_po.py  parse_raws.py  parse_text_set.py  plain_text_to_pot.py  po.py  po2csv.py  raw2pot.py  show_mo_contents.py  stringdump2pot.py  test_raws_mo.py  trans2po.py  trans2pot.py  translate_batch.py  (+5 more)
df_gettext_toolkit/convert/: __init__.py  cli.py  hardcoded_po_to_csv.py  objects_po_to_csv.py  po_to_csv.py
df_gettext_toolkit/create_mod/: __init__.py  batch.py  cli.py  from_template.py  from_vanilla.py  generate_preview.py  generate_preview_from_svg.py  template_from_vanilla.py
df_gettext_toolkit/create_mod/templates/: info_template.txt
df_gettext_toolkit/create_pot/: __init__.py  batch.py  cli.py  from_compressed.py  from_plain_text.py  from_raw_objects.py  from_speech.py  from_steam_text.py  from_string_dump.py  from_text_steam.py
df_gettext_toolkit/csv_bisect/: cli.py  csv_bisect.py
df_gettext_toolkit/parse/: parse_mo.py  parse_plain_text.py  parse_po.py  parse_raws.py  parse_text_set.py
df_gettext_toolkit/translate/: batch.py  translate_compressed.py  translate_plain_text.py  translate_raws.py
df_gettext_toolkit/utils/: backup.py  common.py  csv_utils.py  df_ignore_string_rules.py  fix_translated_strings.py  po_utils.py
df_gettext_toolkit/validation/: validate_objects.py
df_translation_toolkit/: __main__.py  cli.py
df_translation_toolkit/convert/: __init__.py  cli.py  hardcoded_po_to_csv.py  objects_po_to_csv.py  text_set_po_to_mo.py  text_to_mo.py
df_translation_toolkit/create_mod/: __init__.py  batch.py  cli.py  from_template.py  generate_preview.py  template_from_vanilla.py
df_translation_toolkit/create_mod/templates/: info_template.txt
df_translation_toolkit/create_pot/: __init__.py  batch.py  cli.py  from_lua.py  from_plain_text.py  from_raw_objects.py  from_speech.py  from_steam_text.py  from_string_dump.py
df_translation_toolkit/csv_bisect/: cli.py  csv_bisect.py
df_translation_toolkit/parse/: parse_lua.py  parse_plain_text.py  parse_raws.py  parse_text_set.py
df_translation_toolkit/translate/: batch.py  translate_plain_text.py  translate_raws.py
df_translation_toolkit/utils/: backup.py  csv_utils.py  df_ignore_string_rules.py  fix_translated_strings.py  maybe_open.py  po_utils.py
df_translation_toolkit/validation/: validate_general.py  validate_objects.py  validation_models.py
notebooks/: README.md  csv_to_po.py  extract_from_lua.py  pyproject.toml  update_raw_po_from_csv.py  update_raw_pot_from_csv.py
tests/: strip_margin.py  test_backup.py  test_cleanup_string.py  test_df_ignore_string_rules.py  test_fix_translated_strings.py  test_objects_po_to_csv.py  test_parse_mo.py  test_parse_po.py  test_parse_raws.py  test_po.py  test_text_to_mo.py  test_translate_raws_batch.py  test_validate_objects.py  test_validation_models.py
