[tool.poetry]
name = "df-translation-toolkit"
version = "0.7.0"
description = "Toolset to convert text extracted from DF to translation format and aback"
authors = ["insolor <insolor@gmail.com>", "aNNiPAk <annipak@yandex.ru>", "shevernitskiy <hwork@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
Unidecode = "^1.3.8"
loguru = "^0.7.2"
babel = "^2.16.0"
requests = "^2.32.3"
jinja2 = "^3.1.4"
cairosvg = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.8.0"
isort = "^5.13.2"
coverage = "^7.6.1"
refurb = "^2.0.0"
ruff = "^0.6.3"

[tool.poetry.scripts]
df_translation_toolkit = "df_translation_toolkit.cli:app"
convert_hardcoded = "df_translation_toolkit.convert.hardcoded_po_to_csv:app"
convert_objects = "df_translation_toolkit.convert.objects_po_to_csv:app"
create_pot = "df_translation_toolkit.create_pot.cli:app"
create_mod = "df_translation_toolkit.create_mod.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "RUF001",
    "ANN002",
    "ANN003",
    "ANN101",
    "PTH123",
    "T201",
    "FIX001",
    "FIX002",
    "TD001",
    "TD003",
    "N818",
]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN001",
    "ANN201",
    "ANN202",
    "D",  # Don't warn about missing documentation in tests
    "PT006",
    "PT007",
    "E501",
]
