[project]
name = "df-translation-toolkit"
version = "0.12.0"
description = "Toolset to convert text extracted from DF to translation format and aback"
authors = [
    { name = "insolor", email = "insolor@gmail.com" },
    { name = "aNNiPAk", email = "annipak@yandex.ru" },
    { name = "shevernitskiy", email = "hwork@list.ru" },
]
requires-python = ">=3.10,<4"
license = "MIT"
dependencies = [
    "typer>=0.20.0,<0.21",
    "Unidecode>=1.4.0,<2",
    "loguru>=0.7.3,<0.8",
    "babel>=2.17.0,<3",
    "requests>=2.32.5,<3",
    "jinja2>=3.1.6,<4",
    "cairosvg>=2.8.2,<3",
]

[project.scripts]
df_translation_toolkit = "df_translation_toolkit.cli:app"
convert_hardcoded = "df_translation_toolkit.convert.hardcoded_po_to_csv:app"
convert_objects = "df_translation_toolkit.convert.objects_po_to_csv:app"
create_pot = "df_translation_toolkit.create_pot.cli:app"
create_mod = "df_translation_toolkit.create_mod.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.1,<4",
    "coverage>=7.12.0,<8",
    "ruff>=0.14.7,<0.15",
    "mypy>=1.19.0,<2",
    "types-requests",
]
marimo = [
    "marimo>=0.18.4,<0.19",
    "pandas>=2.3.3,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "marimo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "RUF001",
    "ANN002",
    "ANN003",
    "PTH123",
    "T201",
    "FIX001",
    "FIX002",
    "TD001",
    "TD003",
    "N818",
    "PLW1641",
]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Don't warn about using of asserts in tests
    "D",      # Don't warn about missing documentation in tests
    "PT006",
    "PT007",
    "E501",
]

"notebooks/*" = [
    "INP001",
    "PLC0415",
    "ANN001",
    "ANN202",
    "N803",
    "B018",
    "PLR1711",
]

[tool.mypy]
exclude = [
  "notebooks",
]
